# signage

./: .gitignore  CMakeLists.txt  README.md  debug.md  journal.md  kiosk.md  main.cpp  main.qml  probing.md  run_eglfs.sh  signage-player.service  test_overlay.qml
.cache/clangd/index/: main.cpp.29D943DDA36A28F0.idx
